# ads-genius-llm

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  ruff.toml
Finetuning/: generated-ads.ipynb  tiiuae-falcon-rw-1b-notebook-markdown.ipynb
app/: main.py
app/api/: routes.py  schemas.py
app/core/: app_logging.py  config.py  queue.py
app/services/: model_service.py  redis_service.py
app/static/: index.html
app/static/js/: main.js
data/: README.md  cli.py  requirements.txt
data/data_pipeline/: llm.py
data/src/config/: __init__.py  fields.py  settings.py
data/src/core/: __init__.py  llm.py  pipeline.py  prompts.py
data/src/schemas/: __init__.py  ad_schemas.py
data/src/utils/: __init__.py  file_utils.py  logging.py
